fix spacing with footer

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -145,8 +145,8 @@ img {
 /* Workshops */
 
 .workshop {
-  margin-bottom: 2em;
-  padding: 1em;
+  margin-bottom: 3em;
+  padding: 1em 3em;
   background: #ffb302;
   border-radius: 4px;
   transition: background 0.5s ease;
